generated/checker-for-evaluation/generated/test-Buffer-Overflow-b58b1b883b9b702e25204dbe2b221eecc8ecd159/build_logs/2/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::hasProperBoundaryCheck(const clang::Stmt*, const clang::ASTContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:34: error: passing ‘const clang::ASTContext’ as ‘this’ argument discards qualifiers [-fpermissive]
   77 |     auto Parents = Ctx.getParents(*S);
      |                    ~~~~~~~~~~~~~~^~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:11,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:131:25: note:   in call to ‘clang::DynTypedNodeList clang::ASTContext::getParents(const NodeT&) [with NodeT = clang::Stmt]’
  131 | inline DynTypedNodeList ASTContext::getParents(const NodeT &Node) {
      |                         ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:83:49: error: binding reference of type ‘clang::SourceManager&’ to ‘const clang::SourceManager’ discards qualifiers
   83 |         SourceManager &SM = Ctx.getSourceManager();
      |                             ~~~~~~~~~~~~~~~~~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:153:67: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(const clang::BinaryOperator*&, const clang::SourceManager&, const clang::LangOptions&)’
  153 |   PathDiagnosticLocation Loc = PathDiagnosticLocation::createBegin(TargetBO,
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
  154 |                                                                      Ctx.getSourceManager(),
      |                                                                      ~~~~~~~~~~~~~~~~~~~~~~~
  155 |                                                                      Ctx.getLangOpts());
      |                                                                      ~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:27: note:   no known conversion for argument 1 from ‘const clang::BinaryOperator*’ to ‘const clang::Decl*’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |               ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:269:81: note:   no known conversion for argument 3 from ‘const clang::LangOptions’ to ‘clang::ento::LocationOrAnalysisDeclContext’ {aka ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>’}
  269 |                                             const LocationOrAnalysisDeclContext LAC);
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:156:31: error: no matching function for call to ‘clang::ento::BugReporter::EmitBasicReport(const clang::FunctionDecl*&, const {anonymous}::SAGenTestChecker*, std::unique_ptr<clang::ento::BugType>::pointer, const char [35], const char [6], const char [93], clang::ento::PathDiagnosticLocation&)’
  156 |   auto *R = BR.EmitBasicReport(FD, this, BT.get(),
      |             ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
  157 |                                "Potential iov_iter count underflow",
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  158 |                                "Logic",
      |                                ~~~~~~~~
  159 |                                "Subtraction of 'shorten' from 'iter->count' may underflow the count without a boundary check",
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  160 |                                Loc);
      |                                ~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:633:8: note: candidate: ‘void clang::ento::BugReporter::EmitBasicReport(const clang::Decl*, const clang::ento::CheckerBase*, llvm::StringRef, llvm::StringRef, llvm::StringRef, clang::ento::PathDiagnosticLocation, llvm::ArrayRef<clang::SourceRange>, llvm::ArrayRef<clang::FixItHint>)’
  633 |   void EmitBasicReport(const Decl *DeclWithIssue, const CheckerBase *Checker,
      |        ^~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:634:34: note:   no known conversion for argument 3 from ‘std::unique_ptr<clang::ento::BugType>::pointer’ {aka ‘clang::ento::BugType*’} to ‘llvm::StringRef’
  634 |                        StringRef BugName, StringRef BugCategory,
      |                        ~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:639:8: note: candidate: ‘void clang::ento::BugReporter::EmitBasicReport(const clang::Decl*, clang::ento::CheckerNameRef, llvm::StringRef, llvm::StringRef, llvm::StringRef, clang::ento::PathDiagnosticLocation, llvm::ArrayRef<clang::SourceRange>, llvm::ArrayRef<clang::FixItHint>)’
  639 |   void EmitBasicReport(const Decl *DeclWithIssue, CheckerNameRef CheckerName,
      |        ^~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:639:66: note:   no known conversion for argument 2 from ‘const {anonymous}::SAGenTestChecker*’ to ‘clang::ento::CheckerNameRef’
  639 |   void EmitBasicReport(const Decl *DeclWithIssue, CheckerNameRef CheckerName,
      |                                                   ~~~~~~~~~~~~~~~^~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
